force-app/main/default/objects/Swap_History__c/Swap_History__c.object-meta.xml
<CustomObject>
    <label>Swap History</label>
    <nameField>
        <displayFormat>SH-{00000}</displayFormat>
        <label>Swap Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Swap Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>