force-app/main/default/objects/Swap_History__c/fields/New_Unit__c.field-meta.xml
<CustomField>
    <fullName>New_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Swap History (As New Unit)</relationshipLabel>
    <relationshipName>Swap_Histories_As_New_Unit</relationshipName>
    <type>Lookup</type>
</CustomField>