force-app/main/default/objects/Swap_History__c/fields/Old_Unit__c.field-meta.xml
<CustomField>
    <fullName>Old_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Swap History (As Old Unit)</relationshipLabel>
    <relationshipName>Swap_Histories_As_Old_Unit</relationshipName>
    <type>Lookup</type>
</CustomField>