force-app/main/default/objects/Swap_History__c/fields/Swap_Reason__c.field-meta.xml
<CustomField>
    <fullName>Swap_Reason__c</fullName>
    <label>Swap Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>